--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,11 +8,11 @@
     <h:body>
         Hello from Facelets
         <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page markers" />
         <br />
 
 
-        <h:link outcome="etiquetas" value="Primefaces welcome to etiquetas" />
+        <h:link outcome="etiquetas" value="Primefaces welcome to etiquetas polyline" />
 
 
     </h:body>
