--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -10,9 +10,9 @@
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page markers" />
         <br />
-
-
         <h:link outcome="etiquetas" value="Primefaces welcome to etiquetas polyline" />
+        <br/>
+        <h:link outcome="mapaRuta" value="Ir a mapa ruta"></h:link>
 
 
     </h:body>
