--- a/web/etiquetas.xhtml
+++ b/web/etiquetas.xhtml
@@ -24,8 +24,8 @@ and open the template in the editor.
         -->
         <h:form>          
             <p:growl id="growl" life="3000" />
-
-            <p:gmap id="gmap" center="32.624,-115.452" zoom="16" type="HYBRID" style="width:100%;height:600px" model="#{polylinesView.polylineModel}">
+            
+            <p:gmap id="gmap" center="32.624,-115.452" zoom="16" type="ROADMAP" style="width:100%;height:600px" model="#{polylinesView.polylineModel}">
                 <p:ajax event="overlaySelect" listener="#{polylinesView.onPolylineSelect}" update="growl" />
             </p:gmap>                 
         </h:form>
