--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,11 +8,12 @@
     <h:body>
         Hello from Facelets
         <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page markers" />
+        <!--muestra markas en -->
+        <h:link outcome="welcomePrimefaces" value="Muestra todos los markers y polylines" />
         <br />
-        <h:link outcome="etiquetas" value="Primefaces welcome to etiquetas polyline" />
+        <h:link outcome="etiquetas" value="Muestra solo los polylines de todas etiquetas" />
         <br/>
-        <h:link outcome="mapaRuta" value="Ir a mapa ruta"></h:link>
+        <h:link outcome="mapaRuta" value="Muestra todos las etiquetas en markers, y permite agregar markers manuealmente"></h:link>
 
 
     </h:body>
