--- a/web/mapaRuta.xhtml
+++ b/web/mapaRuta.xhtml
@@ -19,17 +19,19 @@ and open the template in the editor.
         type="text/javascript"></script>
     </h:head>
     <h:body>
-        <p:growl id="messages" showDetail="true" />
+        <p:growl id="messages" showDetail="true" life="1500"/>
 
         <p:gmap id="gmap" center="32.624,-115.452" zoom="16" type="ROADMAP" style="width:100%;height:400px"
-                model="#{addMarkersView.emptyModel}" onPointClick="handlePointClick(event);" widgetVar="map" />
+                model="#{addMarkersView.emptyModel}" onPointClick="handlePointClick(event);" widgetVar="map">
+            <p:ajax event="overlaySelect" listener="#{addMarkersView.clicMarker}" update="messages"></p:ajax>
+        </p:gmap>
+
 
         <p:dialog widgetVar="dlg" showEffect="fade">
             <h:form prependId="false">
                 <h:panelGrid columns="2">
                     <h:outputLabel for="title" value="Title:" />
                     <p:inputText id="title" value="#{addMarkersView.title}" />
-
                     <f:facet name="footer">
                         <p:commandButton value="Add" actionListener="#{addMarkersView.addMarker}" update=":messages" oncomplete="markerAddComplete()" />
                         <p:commandButton value="Cancel" onclick="return cancel()" />
