--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -13,7 +13,7 @@
         <br />
         <h:link outcome="etiquetas" value="Muestra solo los polylines de todas etiquetas" />
         <br/>
-        <h:link outcome="mapaRuta" value="Muestra todos las etiquetas en markers, y permite agregar markers manuealmente"></h:link>
+        <h:link outcome="mapaRuta" value="Muestra todos las etiquetas en markers, y permite agregar markers manualmente"></h:link>
 
 
     </h:body>
