--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -14,6 +14,8 @@
         <h:link outcome="etiquetas" value="Muestra solo los polylines de todas etiquetas" />
         <br/>
         <h:link outcome="mapaRuta" value="Muestra todos las etiquetas en markers, y permite agregar markers manualmente"></h:link>
+        <br/>
+        <h:link outcome="polyline" value="Mostrar Rutas"></h:link>
 
 
     </h:body>
