--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -16,7 +16,8 @@
         <h:link outcome="mapaRuta" value="Muestra todos las etiquetas en markers, y permite agregar markers manualmente"></h:link>
         <br/>
         <h:link outcome="polyline" value="Mostrar Rutas"></h:link>
-
+    <br/>
+        <h:link outcome="agregarEmpleado" value="ir a agregar empleado"></h:link>
 
     </h:body>
 </html>
