obtener lista de ctoServicios
*se agrego una nueva clase llamada CtoServicioFacade.java con un metodo getListCtoServicios(), se agrego a ServiceFacadeLocator.
		-metodo getListCtoServicios();
		-metodo getIdCtoServicio(int id);
*se creo una nueva clase llamada HorariosFacade.java ,  se agrego a serviceFacadeLocator.
		-metodoo getListHorarios()
		-metodo getIdHorario();

-Agregar Ronda:
	*se agrego clase RondaFacade.java  // 


		-metodo getListRondas();

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -18,6 +18,8 @@
         <h:link outcome="polyline" value="Mostrar Rutas"></h:link>
         <br/>
         <h:link outcome="agregarEmpleado" value="ir a agregar empleado"></h:link>
+        <br/>
+        <h:link outcome="Rondas" value="ir a agregar ronda"></h:link>
     </h:body>
 </html>
 
