obtener lista de ctoServicios
*se agrego una nueva clase llamada CtoServicioFacade.java con un metodo getListCtoServicios(), se agrego a ServiceFacadeLocator.
		-metodo getListCtoServicios();
		-metodo getIdCtoServicio(int id);
*se creo una nueva clase llamada HorariosFacade.java ,  se agrego a serviceFacadeLocator.
		-metodoo getListHorarios()
		-metodo getIdHorario();

-Agregar Ronda:
	*se agrego clase RondaFacade.java  // 


		-metodo getListRondas();

--- a/web/Rondas.xhtml
+++ b/web/Rondas.xhtml
@@ -19,10 +19,10 @@ and open the template in the editor.
         <h:form>
             <h:panelGrid>
                 <p:outputLabel value="Nombre de ronda"></p:outputLabel>
-                <p:inputText value=""/>
+                <p:inputText value="#{rondasUI.rondasHelper.nombre}"/>
 
                 <p:outputLabel value="Tiempo estimado:"></p:outputLabel>
-                <p:inputText value=""></p:inputText>
+                <p:inputText value="#{rondasUI.rondasHelper.tiempoEstimando}"></p:inputText>
 
 
                 <h:outputText value="status: " />
