obtener lista de ctoServicios
*se agrego una nueva clase llamada CtoServicioFacade.java con un metodo getListCtoServicios(), se agrego a ServiceFacadeLocator.
		-metodo getListCtoServicios();
		-metodo getIdCtoServicio(int id);
*se creo una nueva clase llamada HorariosFacade.java ,  se agrego a serviceFacadeLocator.
		-metodoo getListHorarios()
		-metodo getIdHorario();

-Agregar Ronda:
	*se agrego clase RondaFacade.java  // 


		-metodo getListRondas();

--- a/web/Rondas.xhtml
+++ b/web/Rondas.xhtml
@@ -36,9 +36,9 @@ and open the template in the editor.
                     <f:selectItems value="#{rondasUI.listCtoHorarios}" var="horario" itemValue="#{horario.idHorario}" itemLabel="#{horario.horaInicial}"/>
                 </h:selectOneMenu>
 
-                <h:commandButton value="Agregar" actionListener="#{rondasUI.rondasHelper.agregarRonda()}"></h:commandButton>
-             
-        
+                <h:commandButton value="submit" actionListener="#{rondasUI.rondasHelper.agregarRonda()}"></h:commandButton>
+  
+    </h:panelGrid>
 
 
             <p:dataTable var="ronda" value="#{rondasUI.listRondas}">
@@ -64,8 +64,6 @@ and open the template in the editor.
                 </p:column>
 
             </p:dataTable>
-
-    </h:panelGrid>
 
 
 
