--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -20,6 +20,9 @@
         <h:link outcome="agregarEmpleado" value="ir a agregar empleado"></h:link>
         <br/>
         <h:link outcome="Rondas" value="ir a agregar ronda"></h:link>
+        <br/>
+        <h:link outcome="Rondas2" value="ir a agregar ronda2"></h:link>
+        
     </h:body>
 </html>
 
