--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -22,7 +22,11 @@
         <h:link outcome="Rondas" value="ir a agregar ronda"></h:link>
         <br/>
         <h:link outcome="Rondas2" value="ir a agregar ronda2"></h:link>
-        
+        <br/>
+        <h:link outcome="Catalogos" value="ir a catalogos "></h:link> 
+        <br/>
+        <h:link outcome="tags" value="ir a tags "></h:link>
+
     </h:body>
 </html>
 
