--- a/web/Catalogos.xhtml
+++ b/web/Catalogos.xhtml
@@ -10,59 +10,123 @@ and open the template in the editor.
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    
+
     <h:head>
         <title>Catalogos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
-    <ui:define name="content">
+
         <div class="Container100">
             <div class="ContainerIndent">
                 <div class="ShadowBox TexAlCenter whiteback BlueBorderedBox">
-                    <h1 class="BigTopic">Empleados de Seguridad Privada</h1>
+                    <h1 class="BigTopic">Catalogo </h1>
                     <span class="gray">Sección de adminstración de Empleados</span>
                 </div>
-
                 <div class="ShadowBox whiteback RedBorderedBox ui-fluid">
                     <div class="Container100 Responsive100">
-                        <h:form id="miform">
-                            <h:panelGrid id="formulario">
+                        <div class="ContainerIndent">
+
+
+                            <h:form id="zonaForm">
                                 <h:panelGrid id="inputCatz" columns="2">
                                     <p:outputLabel value="Nombre: "></p:outputLabel>
                                     <p:inputText label="Ingresar Nombre:" value="#{catalogosUI.catalogosHelper.ctoZona.zona}"/>                            
                                 </h:panelGrid>
-                            </h:panelGrid>
-                            <h:panelGrid id="buttonsCrud" columns="3">
-                                <p:commandButton value="Agregar" actionListener="#{catalogosUI.catalogosHelper.agredarZona()}" ajax="true" update="@form">
-                                </p:commandButton>
-                                <p:commandButton value="Actualizar" actionListener="#{catalogosUI.catalogosHelper.modificarZona()}" ajax="true" update="@form">
-                                </p:commandButton>
-                                <p:commandButton value="Cancelar" actionListener="#{catalogosUI.catalogosUI.cancelar()}" ajax="true" update="@form">
-                                </p:commandButton>
-                            </h:panelGrid>
-                            <p:dataTable var="catz" value="#{catalogosUI.listCtoZonas}" selectionMode="single" selection="#{catalogosUI.ctoZona}" rowKey="#{catz.idCtoZona}" rows="10" paginator="true" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                         rowsPerPageTemplate="5,10,15" emptyMessage="No empleados found with given criteria" reflow="true">
-                                <p:ajax event="rowSelect" update="@form" listener="#{catalogosUI.stateChange(behavior)}"/>
-
-                                <p:column headerText="Id">
-                                    <h:outputText value="#{catz.idCtoZona}" />
-                                </p:column>
-                                <p:column headerText="Nombre">
-                                    <h:outputText value="#{catz.zona}" />
-                                </p:column>
-
-                            </p:dataTable>
-                        </h:form>
+                                <h:panelGrid columns="3">
+                                    <p:commandButton value="Agregar" actionListener="#{catalogosUI.catalogosHelper.agredarZona()}" ajax="true" update="dataF:dca">
+                                    </p:commandButton>
+                                    <p:commandButton value="Actualizar" actionListener="#{catalogosUI.editarZona()}" ajax="true" update="dataF:dca">
+                                    </p:commandButton>
+                                    <p:commandButton value="Cancelar" actionListener="#{catalogosUI.catalogosUI.cancelar()}" ajax="true" update="@form">
+                                    </p:commandButton>
+                                </h:panelGrid>
+                            </h:form>
+                        </div>
                     </div>
                 </div>
+
+                <h:form id="dataF">
+                    <p:dataTable id="dca" var="catz" value="#{catalogosUI.listCtoZonas}" selectionMode="single" selection="#{catalogosUI.catalogosHelper.ctoZona}" rowKey="#{catz.idCtoZona}" 
+                                 rows="10" paginator="true" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                 rowsPerPageTemplate="5,10,15" emptyMessage="No empleados found with given criteria" reflow="true">
+                        <f:facet name="header">
+                            Listado de Catalogo Zonas
+                        </f:facet>
+                        <p:ajax event="rowSelect" update=":zonaForm" process="@this" listener="#{catalogosUI.stateChange(behavior)}"/>
+
+                        <p:column headerText="Id" sortBy="#{catz.idCtoZona}" footerText="Id">
+                            <h:outputText value="#{catz.idCtoZona}" />
+                        </p:column>
+                        <p:column headerText="Nombre" sortBy="#{catz.zona}" footerText="Id">
+                            <h:outputText value="#{catz.zona}" />
+                        </p:column>
+
+                    </p:dataTable>
+                </h:form>
             </div>
         </div>
-    </ui:define>
+
+        <div class="Container100">
+            <div class="ContainerIndent">
+                <div class="ShadowBox TexAlCenter whiteback BlueBorderedBox">
+                    <h1 class="BigTopic">Catalogo Servcios </h1>
+                    <span class="gray">Sección de adminstración de Servcios</span>
+                </div>
+                <div class="ShadowBox whiteback RedBorderedBox ui-fluid">
+                    <div class="Container100 Responsive100">
+                        <div class="ContainerIndent">
 
 
+                            <h:form id="serForm">
+                                <h:panelGrid id="inputCatz" columns="5">
+                                    <p:outputLabel value="CLAVE "></p:outputLabel>
+                                    <p:inputText label="Ingresar Clave" value="#{catalogosUI.catalogosHelper.ctoServicio.clave}"/>  
+
+                                    <p:outputLabel value="Nombre: "></p:outputLabel>
+                                    <p:inputText label="Ingresar Nombre:" value="#{catalogosUI.catalogosHelper.ctoServicio.servicio}"/>    
+                                    <p:selectOneMenu  id="z" immediate="true" value="#{catalogosUI.catalogosHelper.idZ}"  >
+                                        <f:selectItems value="#{catalogosUI.listCtoZonas}" var="entidad" itemValue="#{entidad.idCtoZona}" itemLabel="#{entidad.zona}"/>
+                                    </p:selectOneMenu> 
+
+                                </h:panelGrid>
 
 
+                                <h:panelGrid columns="3">
+                                    <p:commandButton value="Agregar" actionListener="#{catalogosUI.catalogosHelper.agredarZona()}" ajax="true" update="dataF:dca">
+                                    </p:commandButton>
+                                    <p:commandButton value="Actualizar" actionListener="#{catalogosUI.editarZona()}" ajax="true" update="dataF:dca">
+                                    </p:commandButton>
+                                    <p:commandButton value="Cancelar" actionListener="#{catalogosUI.catalogosUI.cancelar()}" ajax="true" update="@form">
+                                    </p:commandButton>
+                                </h:panelGrid>
+                            </h:form>
+                        </div>
+                    </div>
+                </div>
 
-</body>
+                <h:form id="dataS">
+                    <p:dataTable id="dca" var="cats" value="#{catalogosUI.listaServicios}" selectionMode="single" selection="#{catalogosUI.catalogosHelper.ctoServicio}" rowKey="#{cats.idCtoServicio}" 
+                                 rows="10" paginator="true" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                 rowsPerPageTemplate="5,10,15" emptyMessage="No empleados found with given criteria" reflow="true">
+                        <f:facet name="header">
+                            Listado de Catalogo Servicios
+                        </f:facet>
+                        <p:ajax event="rowSelect" update=":serForm" process="@this" listener="#{catalogosUI.stateChange(behavior)}"/>
+
+                        <p:column headerText="idServicio" sortBy="#{cats.idCtoServicio}" footerText="Id">
+                            <h:outputText value="#{cats.idCtoServicio}" />
+                        </p:column>
+                        <p:column headerText="Clave" sortBy="#{cats.clave}" footerText="Id">
+                            <h:outputText value="#{cats.clave}" />
+                        </p:column>
+                        <p:column headerText="Servicio" sortBy="#{cats.servicio}" footerText="Id">
+                            <h:outputText value="#{cats.servicio}" />
+                        </p:column>
+                    </p:dataTable>
+                </h:form>
+            </div>
+        </div>
+
+    </body>
 </html>
