mostrar hallazgos por servicio incompleto, problems en mostrar en datatable

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -26,6 +26,8 @@
         <h:link outcome="Catalogos" value="ir a catalogos "></h:link> 
         <br/>
         <h:link outcome="tags" value="ir a tags "></h:link>
+        <br/>
+        <h:link outcome="hallazgo" value="ir a hallazgos "></h:link>
 
     </h:body>
 </html>
