--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -28,6 +28,8 @@
         <h:link outcome="tags" value="ir a tags "></h:link>
         <br/>
         <h:link outcome="hallazgo" value="ir a hallazgos "></h:link>
+        <br/>
+        <h:link outcome="CatalogoEtiquetas" value="ir a etiquetas "></h:link>
 
     </h:body>
 </html>
