--- a/web/CatalogoEtiquetas.xhtml
+++ b/web/CatalogoEtiquetas.xhtml
@@ -54,34 +54,41 @@ and open the template in the editor.
                                         <f:ajax event="click" render="@form" listener="#{etiquetasUI.saveAction(listener)}"/>
                                     </p:commandButton>
 
-                                    <p:commandButton value="Agregar" action="#{etiquetasUI.etiquetaHelper.registrarEtiqueta()}" ajax="true" update="@form">
-                                    </p:commandButton>
-                                    <p:commandButton value="Actualizar" actionListener="#{empleadoUI.empleadoHelper.actualizarPersonaEmpleado()}" ajax="true" update="@form">
-                                    </p:commandButton>
-                                    <p:commandButton value="Cancelar" actionListener="#{empleadoUI.empleadoHelper.cancelar()}" ajax="true" update="@form">
-                                    </p:commandButton>
+                                    <p:commandButton value="Actualizar" ajax="true">
+                                        <f:ajax event="click" render="@form" listener="#{etiquetasUI.updateAction(actionEvent)}"/>
+                                    </p:commandButton>  
+                                                 <p:commandButton  value="Cancelar">
+                                    </p:commandButton>                              
+
+                          
                                 </h:panelGrid>
+
                                 <p:dataTable var="eti" value="#{etiquetasUI.listEtiquetas}" selectionMode="single" selection="#{etiquetasUI.etiquetaHelper.currentEtiqueta}" rowKey="#{eti.idEtiqueta}"     
                                              rows="10" paginator="true" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                              rowsPerPageTemplate="5,10,15" emptyMessage="No empleados found with given criteria" reflow="true">
-                                    <p:ajax event="rowSelect" update="@form" listener="#{etiquetasUI.stateChange(behavior)}"/>
+                                    <f:facet name="header">
+                                        Lista de Etiquetas 
+                                    </f:facet>
+                                    <p:ajax event="rowSelect" process="@this" update="@form" listener="#{etiquetasUI.stateChange(behavior)}"/>
 
-                                    <p:column headerText="Id">
+                                    <p:column headerText="idEtiqueta">
 
-                                        <h:outputText value="#{emp.idEmpleado}" />
+                                        <h:outputText value="#{eti.idEtiqueta}" />
                                     </p:column>
-                                    <p:column headerText="Numero">
-                                        <h:outputText value="#{emp.numeroEmpleado}" />
-                                    </p:column>
-                                    <p:column headerText="TipoEmpleado">
-                                        <h:outputText value="#{emp.fkIdTipoEmpleado.tipoEmpleado}" />
+                                    <p:column headerText="Valor Tag">
+                                        <h:outputText value="#{eti.valorTag}" />
                                     </p:column>
                                     <p:column headerText="Nombre">
-                                        <h:outputText value="#{emp.fkIdPersona.nombre}" />
+                                        <h:outputText value="#{eti.nombre}" />
                                     </p:column>
-                                    <p:column headerText="Apellido">
-                                        <h:outputText value="#{emp.fkIdPersona.apellidoPaterno}" />
+                                    <p:column headerText="latitud">
+                                        <h:outputText value="#{eti.latitud}" />
                                     </p:column>
+                                    <p:column headerText="Logitud">
+                                        <h:outputText value="#{eti.longitud}" />
+                                    </p:column>
+
+
                                 </p:dataTable>
 
 
