--- a/web/hallazgo.xhtml
+++ b/web/hallazgo.xhtml
@@ -25,28 +25,37 @@ and open the template in the editor.
             <h:form>
                 <p:column headerText="selet">
                     <h:panelGrid>
-                        <p:selectOneMenu id="ser" value="#{hallazgoUI.ctoServicioSelected}" required="true" label="s">
+                         <p:outputLabel for="ser" value="Servicio: " />
+                        <p:selectOneMenu id="ser" value="#{hallazgoUI.ctoServicioSelected}" label="s">
                             <f:selectItems value="#{hallazgoUI.listaCtoServicios}" var="servicio" itemValue="#{servicio.idCtoServicio}" itemLabel="#{servicio.servicio}"/>
                         </p:selectOneMenu>
-
                     </h:panelGrid>
                 </p:column>
-                <p:commandButton  value="Traer hallazgo por servicio" update="datos"/>
+                <p:commandButton  value="Consultar hallazgo por servicio" update="datos"/>
 
                 <p:dataTable id="datos" value="#{hallazgoUI.listaHallazgoByIdServicio}" var="hallazgo"
                              rows="10" paginator="true" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                             rowsPerPageTemplate="5,10,15" emptyMessage="No cars found with given criteria" reflow="true"
+                             rowsPerPageTemplate="5,10,15" emptyMessage="Seleccione servicio a consultar hallazgos " reflow="true"
                              selectionMode="single" selection="#{hallazgoUI.hallazgo}" rowKey="#{hallazgo.idHallazgo}"
-
                              >
                     <f:facet name="header">
                         Hallazgos filtrados por servicio
                     </f:facet>
-                    <p:column headerText="descripcion" sortBy="#{hallazgo.descripcion}" footerText="Id">
+                    <p:column headerText="descripcion" sortBy="#{hallazgo.descripcion}" footerText="Descripcion">
                         <h:outputText value="#{hallazgo.descripcion}" />
                     </p:column>
-                    <p:column headerText="empleado" sortBy="#{hallazgo.fkIdEmpleado.numeroEmpleado}" footerText="Id">
+                    <p:column headerText="Fecha" sortBy="#{hallazgo.fecha}" footerText="Fecha">
+                        <h:outputText value="#{hallazgo.fecha}" />
+                    </p:column>
+                    <p:column headerText="Empleado" sortBy="#{hallazgo.fkIdEmpleado.numeroEmpleado}" footerText="Empleado">
                         <h:outputText value="#{hallazgo.fkIdEmpleado.numeroEmpleado}" />
+                    </p:column>
+                    <p:column headerText="Valor Tag" sortBy="#{hallazgo.fkIdEtiqueta.valorTag}" footerText="Valor Tag">
+                        <h:outputText value="#{hallazgo.fkIdEtiqueta.valorTag}" />
+                    </p:column>
+                    <p:column headerText="Servicio" sortBy="#{hallazgo.fkIdEtiqueta.fkServicio.servicio}" footerText="Servicio">
+                        <h:outputText value="#{hallazgo.fkIdEtiqueta.fkServicio.servicio}" />
+
                     </p:column>
 
                 </p:dataTable>
