--- a/web/Catalogos.xhtml
+++ b/web/Catalogos.xhtml
@@ -20,7 +20,7 @@ and open the template in the editor.
         <div class="Container100">
             <div class="ContainerIndent">
                 <div class="ShadowBox TexAlCenter whiteback BlueBorderedBox">
-                    <h1 class="BigTopic">Catalogo </h1>
+                    <h1 class="BigTopic">Catalogo Zonas</h1>
                     <span class="gray">Sección de adminstración de Empleados</span>
                 </div>
                 <div class="ShadowBox whiteback RedBorderedBox ui-fluid">
