--- a/web/usuarios.xhtml
+++ b/web/usuarios.xhtml
@@ -67,7 +67,7 @@ and open the template in the editor.
                                     <p:password id="pwd2" value="#{usuarioUI.usuarioHelper.usuario.password}" label="Password 2" feedback="true" required="true" />
                                 </h:panelGrid>
 
-                                <p:commandButton value="Destroy the World" actionListener="#{usuarioUI.destroyWorld()}" >
+                                <p:commandButton value="Registrar" actionListener="#{usuarioUI.destroyWorld()}" >
                                     <p:confirm header="Confirmation" message="Are you sure?" icon="ui-icon-alert" />
                                 </p:commandButton>
 
