--- a/web/tags.xhtml
+++ b/web/tags.xhtml
@@ -92,7 +92,7 @@ and open the template in the editor.
                             <p:messages id="msgs" />
                             <h:panelGrid   columns="2">
                                 <h:outputText value="Pregunta" />
-                                <p:inputText  label="Pregunta" value="#{tagsUI.pregunta}"  required="true">
+                                <p:inputText  label="Pregunta" value="#{tagsUI.pregunta}"  required="true" title="Pregunta">
                                     <f:validateLength minimum="2" />
                                 </p:inputText>
                                 <p:outputLabel value="Acciones: "/>
