--- a/web/catalogosEtiquetas2.xhtml
+++ b/web/catalogosEtiquetas2.xhtml
@@ -21,7 +21,7 @@ and open the template in the editor.
             <div class="ContainerIndent">
                 <div class="ShadowBox TexAlCenter whiteback BlueBorderedBox">
                     <h1 class="BigTopic">Catalogo </h1>
-                    <span class="gray">Sección de adminstración de Empleados</span>
+                    <span class="gray">Sección de adminstración de Etiquetas</span>
                 </div>
                 <div class="ShadowBox whiteback RedBorderedBox ui-fluid">
                     <div class="Container100 Responsive100">
