--- a/web/Rondas2.xhtml
+++ b/web/Rondas2.xhtml
@@ -102,6 +102,10 @@ and open the template in the editor.
                     <br/>
                     <h:outputText value="#{ronda.fkIdHorario.horaFinal}" />
                 </p:column>
+                
+                <p:column headerText="Clave">
+                    <h:outputText value="#{ronda.fkIdServicio.clave}"></h:outputText>
+                </p:column>
                 <p:column headerText="Servicio">
                     <h:outputText value="#{ronda.fkIdServicio.servicio}"/>
                 </p:column>
